--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 [deps]
+CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
-Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
